write ffmpeg debug reports to home directory instead of /tmp

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2798,7 +2798,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <div>Generate ffmpeg reports in /tmp (debugging)</div>
+            <div>Generate ffmpeg reports in $HOME (for debugging)</div>
             <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> Report files are not automatically deleted</div>
         </div>
     </div>
