--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1532,7 +1532,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.IMAGE_COLORMAP.label }}
         </div>
         <div class="col-sm-3">
-            {{ form_config.IMAGE_COLORMAP(class='form-control bg-secondary') }}
+            {{ form_config.IMAGE_COLORMAP(class='form-select bg-secondary') }}
             <div id="IMAGE_COLORMAP-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">Apply colormap to show image flatness</div>
@@ -1711,6 +1711,17 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">Enable saving raw FITS (non-stacked) data</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_FITS_PERIOD.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_FITS_PERIOD(class='form-select bg-secondary') }}
+            <div id="IMAGE_SAVE_FITS_PERIOD-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
     </div>
 
     <div class="form-group row">
@@ -7744,6 +7755,7 @@ const field_names = [
     'IMAGE_SAVE_HOOK_PRE',
     'IMAGE_SAVE_HOOK_POST',
     'IMAGE_SAVE_HOOK_TIMEOUT',
+    'IMAGE_SAVE_FITS_PERIOD',
     'TIMELAPSE_EXPIRE_DAYS',
     'FFMPEG_FRAMERATE',
     'FFMPEG_FRAMERATE_DAY',
