--- a/indi_allsky/flask/templates/drive_manager.html
+++ b/indi_allsky/flask/templates/drive_manager.html
@@ -43,6 +43,12 @@ var camera_id = {{ camera_id }};
 
 
 <!-- should be above tab contents -->
+
+<hr>
+
+<div><span class="badge rounded-pill bg-info text-dark">Note</span> Run <span class="bg-secondary">./misc/setup_usb_automount.sh</span> to automount USB drives at boot</div>
+
+
 {% if not udisks2_installed %}
 <hr>
 <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> UDisks2 is not available</div>
