--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1591,52 +1591,6 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
-            {{ form_config.IMAGE_SAVE_HOOK_PRE.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-5">
-            {{ form_config.IMAGE_SAVE_HOOK_PRE(class='form-control bg-secondary') }}
-            <div id="IMAGE_SAVE_HOOK_PRE-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-5">
-            <div>
-                <div>External script to run before saving image</div>
-                <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> The image save hooks can slow down image processing if they take too long to execute</div>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_SAVE_HOOK_POST.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-5">
-            {{ form_config.IMAGE_SAVE_HOOK_POST(class='form-control bg-secondary') }}
-            <div id="IMAGE_SAVE_HOOK_POST-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-5">
-            <div>
-                <div>External script to run after saving image</div>
-                <div>The image path is passed as the first parameter when executed</div>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_SAVE_HOOK_TIMEOUT.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_config.IMAGE_SAVE_HOOK_TIMEOUT(class='form-control bg-secondary') }}
-            <div id="IMAGE_SAVE_HOOK_TIMEOUT-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-8">
-        </div>
-    </div>
-
-    <hr>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
             {{ form_config.IMAGE_EXPORT_RAW.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -3674,6 +3628,78 @@ var camera_id = {{ camera_id }};
             <div id="FISH2PANO__PIL_FONT_SIZE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CAPTURE_HOOK_POST.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.CAPTURE_HOOK_POST(class='form-control bg-secondary') }}
+            <div id="CAPTURE_HOOK_POST-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+            <div>External script to run after capturing image</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Runs in CAPTURE worker process</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CAPTURE_HOOK_TIMEOUT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CAPTURE_HOOK_TIMEOUT(class='form-control bg-secondary') }}
+            <div id="CAPTURE_HOOK_TIMEOUT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> The capture hook can introduce additional delays between images if it takes too long to execute</div>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_HOOK_PRE.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.IMAGE_SAVE_HOOK_PRE(class='form-control bg-secondary') }}
+            <div id="IMAGE_SAVE_HOOK_PRE-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+            <div>External script to run before saving image</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Runs in IMAGE worker process</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_HOOK_POST.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-5">
+            {{ form_config.IMAGE_SAVE_HOOK_POST(class='form-control bg-secondary') }}
+            <div id="IMAGE_SAVE_HOOK_POST-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-5">
+            <div>External script to run after saving image</div>
+            <div>The image path is passed as the first parameter when executed</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_HOOK_TIMEOUT.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.IMAGE_SAVE_HOOK_TIMEOUT(class='form-control bg-secondary') }}
+            <div id="IMAGE_SAVE_HOOK_TIMEOUT-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+                <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> The image save hooks can slow down image processing if they take too long to execute</div>
         </div>
     </div>
 
@@ -7740,6 +7766,8 @@ const field_names = [
     'IMAGE_SAVE_HOOK_PRE',
     'IMAGE_SAVE_HOOK_POST',
     'IMAGE_SAVE_HOOK_TIMEOUT',
+    'CAPTURE_HOOK_POST',
+    'CAPTURE_HOOK_TIMEOUT',
     'IMAGE_SAVE_FITS_PERIOD',
     'TIMELAPSE_EXPIRE_DAYS',
     'FFMPEG_FRAMERATE',
