add CLI entries

--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -637,7 +637,7 @@ $('#form_settime').on('submit', function() {
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-2">(BETA) Unattended Upgrade</div>
+    <div class="col-sm-2">(BETA) Unattended Upgrade<br><div style="font-size:10px">CLI: ./misc/unattended_upgrade.sh</div></div>
     <div class="col-sm-2">
         <input class="form-check-input" id="UPGRADE_CONFIRM1" name="UPGRADE_CONFIRM1" type="checkbox" value="y"> Confirm 1
     </div>
@@ -657,7 +657,7 @@ $('#form_settime').on('submit', function() {
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-2">Database Backup</div>
+    <div class="col-sm-2">Database Backup<br><div style="font-size:10px">CLI: ./misc/backup_database.py</div></div>
     <div class="col-sm-2">
         <input class="form-check-input" id="BACKUP_DB_CONFIRM1" name="BACKUP_DB_CONFIRM1" type="checkbox" value="y"> Confirm 1
     </div>
