--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -659,7 +659,7 @@ $('#form_settime').on('submit', function() {
     <div class="col-sm-2"></div>
     <div class="col-sm-2">Database Backup<br><div style="font-size:10px">CLI: ./misc/backup_database.py</div></div>
     <div class="col-sm-2">
-        <input class="form-check-input" id="BACKUP_DB_CONFIRM1" name="BACKUP_DB_CONFIRM1" type="checkbox" value="y"> Confirm 1
+        <input class="form-check-input" id="BACKUP_DB_CONFIRM1" name="BACKUP_DB_CONFIRM1" type="checkbox" value="y"> Confirm
     </div>
     <div class="col-sm-2">
         <button class="btn btn-info" id="button_backup_db">Backup DB</button>
@@ -712,7 +712,7 @@ $('#form_settime').on('submit', function() {
 <hr>
 
 <div class="row">
-    <div class="col-sm-2"><h4>DANGER</h4></div>
+    <div class="col-sm-2"><h4>&#9888; DANGER &#9888;</h4></div>
 </div>
 
 <div class="row">
