setup image circle view

--- a/indi_allsky/flask/templates/camera_simulator.html
+++ b/indi_allsky/flask/templates/camera_simulator.html
@@ -345,6 +345,8 @@ var sd = {
 {% endblock %}
 
 {% block content %}
+<div class="container h-100">
+
 <form id="form_camera_simulator" onSubmit="return false;">
     <div class="form-group row">
         <div class="col-sm-1">
@@ -397,6 +399,9 @@ var sd = {
     <div class="text-center">
         <span id="permalink"></span>
     </div>
+</div>
+
+</div>
 <script>
 
 function pixels2mm(pixels, pixel_um) {
