add fake button

--- a/indi_allsky/flask/templates/imagecircle.html
+++ b/indi_allsky/flask/templates/imagecircle.html
@@ -173,6 +173,11 @@ function closeFullscreen() {
         <div class="col-sm-1">
             {{ form_imagecircle.OFFSET_Y(class='form-control bg-secondary') }}
         </div>
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-1">
+            <button class="btn btn-primary">Update</button>
+        </div>
     </div>
 </form>
 
