--- a/indi_allsky/flask/templates/imagecirclehelper.html
+++ b/indi_allsky/flask/templates/imagecirclehelper.html
@@ -186,7 +186,7 @@ function closeFullscreen() {
         </div>
 
         <div class="col-sm-1">
-            <button class="btn btn-primary">Update</button>
+            <button class="btn btn-primary">Refresh</button>
         </div>
     </div>
 </form>
