--- a/indi_allsky/flask/templates/imagecirclehelper.html
+++ b/indi_allsky/flask/templates/imagecirclehelper.html
@@ -195,6 +195,10 @@ function closeFullscreen() {
 
 
 <div class="row">
+    <div class="text-center" style="font-size:10px">
+        This page is used help size your image circle settings
+    </div>
+
     <div class="text-muted text-center" id="message">Loading...</div>
 </div>
 <div class="row">
