--- a/indi_allsky/flask/templates/imagecirclehelper.html
+++ b/indi_allsky/flask/templates/imagecirclehelper.html
@@ -196,7 +196,7 @@ function closeFullscreen() {
 
 <div class="row">
     <div class="text-center" style="font-size:10px">
-        This page is used help size your image circle settings
+        This page is used help size your image circle settings - Line up the green circle to match the image circle on the screen
     </div>
 
     <div class="text-muted text-center" id="message">Loading...</div>
