--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -908,7 +908,7 @@ var fullscreen = false;  //initial state
             <div id="IMAGE_CIRCLE_MASK__OFFSET_X-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Not Used - Use Lens offsets on Image Tab</div>
+            <div>Not Used - Use Lens offsets on Location Tab</div>
         </div>
     </div>
 
